--- a/action.yaml
+++ b/action.yaml
@@ -52,11 +52,13 @@ runs:
         fi
 
         if [ -n "$CONFIG_FILE_PATH" ]; then
-          IFS='\n'
-          for file in "$(echo "$CONFIG_FILE_PATH")"; do
+          while read -r file; do
+            if [ -z "$file" ]; then
+              continue
+            fi
             echo "===> RENOVATE_CONFIG_FILE=\"$file\" npx --yes --package \"$pkg\" -c \"renovate-config-validator $opts\"" >&2
             RENOVATE_CONFIG_FILE="$file" npx --yes --package "$pkg" -c "renovate-config-validator $opts"
-          done
+          done < <(echo "$CONFIG_FILE_PATH")
           exit 0
         fi
 
