--- a/action.yaml
+++ b/action.yaml
@@ -47,9 +47,7 @@ runs:
           exit 1
         fi
 
-        if [ -n "$VALIDATOR_VERSION" ]; then
-          pkg="renovate@$VALIDATOR_VERSION"
-        fi
+        pkg="renovate@${VALIDATOR_VERSION:-latest}"
 
         if [ -n "$CONFIG_FILE_PATH" ]; then
           files=$(echo "$CONFIG_FILE_PATH" | tr '\n' ' ')
