feat: enable npm cache by default to reduce 403 errors
Add npm_cache input (default: "true") and actions/cache step for ~/.npm
to avoid downloading renovate from npm registry on every run, reducing
403 Forbidden errors and speeding up installation.

Close #1091

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,3 +39,7 @@ jobs:
         uses: ./
         with:
           config_file_path: ${{ steps.files.outputs.files }}
+      - name: Test with npm_cache disabled
+        uses: ./
+        with:
+          npm_cache: "false"
